# straxion

./: .bumpversion.cfg  .coveragerc  .cursorrules  .customized_mplstyle  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  setup.cfg
.github/: pull_request_template.md
.github/workflows/: pypi_install.yml  pytest.yml  test_install.yml
docs/: SECURE_TEST_DATA_SETUP.md
notebooks/: README.md  sample_amplitudes.npy  tutorial.ipynb  tutorial0_from_raw_to_hits.ipynb
scripts/: README.md  online_monitor.py  prepare_release_data.py
straxion/: README.md  __init__.py  colors.py  constants.py  contexts.py  utils.py
straxion/msc/: noise_psd_38kHz.npy  pulse_template_38kHz.npy  template_interp.pkl
straxion/msc/sr2_pt2_templates/: ch0_template_interp.pkl  ch10_template_interp.pkl  ch11_template_interp.pkl  ch12_template_interp.pkl  ch13_template_interp.pkl  ch14_template_interp.pkl  ch15_template_interp.pkl  ch16_template_interp.pkl  ch17_template_interp.pkl  ch18_template_interp.pkl  ch19_template_interp.pkl  ch1_template_interp.pkl  ch20_template_interp.pkl  ch21_template_interp.pkl  ch22_template_interp.pkl  (+26 more)
straxion/plugins/: README.md  __init__.py  baseline_monitor.py  hit_classification.py  hits.py  match.py  noise_bank.py  raw_records.py  records.py  truth.py
tests/: README.md  run_test_example.py  test_baseline_monitor.py  test_channel_position.py  test_colors.py  test_contexts.py  test_hit_classification.py  test_hits.py  test_match.py  test_noise_bank.py  test_raw_records.py  test_records.py  test_truth.py
(+15 files in other folders)
