[tool]
[tool.poetry]
name = "straxion"
version = "0.2.0"
description = "strax-based time series analysis for single photon counting experiments"
readme = "README.md"
authors = [
  "Lanqing Yuan"
]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
]
repository = "https://github.com/WashU-Astroparticle-Lab/straxion"

[tool.poetry.dependencies]
python = ">=3.11"
strax = "*"
numpy = "*"
numba = "*"
pandas = "*"
scipy = "*"
matplotlib = "*"

[build-system]
requires = ["poetry-core>=1.0.8", "setuptools>=61.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
preview = true

[tool.docformatter]
recursive = true
in-place = true
style = "sphinx"
wrap-summaries = 100
wrap-descriptions = 100
blank = true
